[package]
name = "validator-pcap-analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
clap = { version = "3.0.10", features = ["derive"] }
color-eyre = "0.6.0"
csv = "1.1.6"
etherparse = "0.10.1"
pcap = "0.9.1"
serde = { version = "1.0.134", features = ["derive"] }
solana-sdk = "1.9.5"
